--- a/pod.yaml
+++ b/pod.yaml
@@ -18,6 +18,6 @@ webhooks:
     failurePolicy: Fail
     sideEffects: None
     admissionReviewVersions: ["v1", "v1beta1"]
-    namespaceSelector:
+    objectSelector:
       matchLabels:
-        app: go-zero
+        project: go-zero
