--- a/yaml/pod.yaml
+++ b/yaml/pod.yaml
@@ -18,9 +18,9 @@ webhooks:
     failurePolicy: Fail
     sideEffects: None
     admissionReviewVersions: ["v1", "v1beta1"]
-    objectSelector:
-      matchLabels:
-        project: go-zero
+    # objectSelector:
+    #   matchLabels:
+    #     project: go-zero
     namespaceSelector:
       matchLabels:
         name: "go"
